# krowdovi

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
app/api/: package.json
app/api/prisma/: schema.prisma
app/api/src/: index.ts
app/api/src/lib/: config.ts  db.ts  logger.ts
app/api/src/middleware/: auth.ts
app/api/src/routes/: ads.ts  analytics.ts  auth.ts  creators.ts  overlays.ts  routes.ts  sessions.ts  tokens.ts  translate.ts  uploads.ts  venues.ts  videos.ts
app/contracts/: Anchor.toml  package.json
app/contracts/programs/wayfind/: Cargo.toml
app/contracts/programs/wayfind/src/: lib.rs
app/contracts/tests/: wayfind.ts
app/shared/: package.json
app/shared/src/: index.ts
app/web/: next.config.js  package.json  tailwind.config.ts  tsconfig.json
app/web/src/app/: globals.css  layout.tsx
app/web/src/app/creator-studio/: page.tsx
app/web/src/app/dashboard/: page.tsx
app/web/src/app/navigate/[id]/: page.tsx
app/web/src/components/: WalletConnectButton.tsx
app/web/src/components/studio/: AdPanel.tsx  OverlayProperties.tsx  OverlayToolbar.tsx  PreviewMode.tsx  Timeline.tsx  TranslationPanel.tsx  VideoPlayer.tsx
app/web/src/components/ui/: button.tsx  input.tsx  select.tsx  slider.tsx  switch.tsx  tabs.tsx  toaster.tsx
app/web/src/lib/: api.ts  utils.ts
app/web/src/lib/stores/: overlay-store.ts
app/web/src/providers/: index.tsx
scripts/: deploy.sh
